Cadastro serviço livre OK

--- a/app/src/main/res/layout/activity_tela_cadastro_servico.xml
+++ b/app/src/main/res/layout/activity_tela_cadastro_servico.xml
@@ -213,12 +213,31 @@
                 android:layout_below="@+id/textDescAtividadesTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="120dp"
+                android:layout_marginStart="220dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="120dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
                 android:background="#5C5B5B"
                 android:text="Criar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintVertical_bias="0.836" />
+
+            <Button
+                android:id="@+id/btnCancelarCriarServicoTCS"
+                android:layout_width="161dp"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/textDescAtividadesTCS"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="220dp"
+                android:layout_marginBottom="20dp"
+                android:background="#5C5B5B"
+                android:text="Cancelar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
