--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -31,6 +31,18 @@
         app:layout_constraintVertical_bias="0.197" />
 
     <Button
+        android:id="@+id/btnChamaTelaVisualizaServico"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:text="Visualizar Serviços"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnChamaTelaCadastroServico"
+        app:layout_constraintVertical_bias="0.197" />
+
+    <Button
         android:id="@+id/btnDeslogar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
