--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -2,57 +2,216 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutInicial"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:foregroundGravity="center"
     tools:context=".Activity.TelaInicial">
 
-    <Button
-        android:id="@+id/btnChamaTelaPerfil"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:text="Perfil"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <TextView
+        android:id="@+id/vwServAbertoDomTI"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="#61474040"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwTiServAbertoDomTI" />
+
+    <TextView
+        android:id="@+id/vwServAceitoDomTI"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="#61474040"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwTiServAceitoDomTI" />
+
+    <TextView
+        android:id="@+id/vwServConcluidoDomTI"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="#61474040"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwTiServConcluidoDomTI" />
+
+    <TextView
+        android:id="@+id/vwServCanceladoDomTI"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="#61474040"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwTiServCanceladoDomTI" />
+
+    <TextView
+        android:id="@+id/vwServRecusadoDomTI"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="#61474040"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwTiServRecusadoDomTI" />
+
+    <TextView
+        android:id="@+id/vwTiServAbertoDomTI"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="56dp"
+        android:background="#85474040"
+        android:gravity="center"
+        android:text="Serviços em Aberto"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMenu"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/vwTiServAceitoDomTI"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="40dp"
+        android:background="#85474040"
+        android:gravity="center"
+        android:text="Serviços Aceitos (Andamento)"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwServAbertoDomTI" />
+
+    <TextView
+        android:id="@+id/vwTiServConcluidoDomTI"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="40dp"
+        android:background="#85474040"
+        android:gravity="center"
+        android:text="Serviços Concluídos"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwServAceitoDomTI" />
+
+    <TextView
+        android:id="@+id/vwTiServCanceladoDomTI"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="40dp"
+        android:background="#85474040"
+        android:gravity="center"
+        android:text="Serviços Cancelados"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwServConcluidoDomTI" />
+
+    <TextView
+        android:id="@+id/vwTiServRecusadoDomTI"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="40dp"
+        android:background="#85474040"
+        android:gravity="center"
+        android:text="Serviços Recusados"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwServCanceladoDomTI" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#C1000000"
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+        <Button
+            android:id="@+id/btnChamaTelaPerfil"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:text="Perfil"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/btnChamaTelaVisualizaServico"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:text="Serviços"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/btnDeslogar"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:text="Sair"
+            android:visibility="visible" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnChamaTelaCadastroServico"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:text="+"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.92"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.973" />
-
-    <Button
-        android:id="@+id/btnChamaTelaVisualizaServico"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:text="Visualizar Serviços"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.299" />
-
-    <Button
-        android:id="@+id/btnDeslogar"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:text="Sair"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnChamaTelaPerfil"
-        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -61,6 +220,7 @@
         android:background="#FF00574B"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +233,7 @@
         android:layout_height="46dp"
         android:background="#FFFFFF"
         android:hint="Pesquisar"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="@+id/toolbar"
         app:layout_constraintHorizontal_bias="0.76"
@@ -84,6 +245,7 @@
         android:id="@+id/btnChamaPesquisa"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/txtPesquisar"
         app:layout_constraintEnd_toEndOf="@+id/txtPesquisar"
         app:layout_constraintHorizontal_bias="1.0"
@@ -96,10 +258,75 @@
         android:id="@+id/btnMenu"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toStartOf="@+id/txtPesquisar"
         app:layout_constraintStart_toStartOf="@+id/toolbar"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
+
+    <TextView
+        android:id="@+id/vwTiServAceitoMarTI"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="56dp"
+        android:background="#85474040"
+        android:gravity="center"
+        android:text="Serviços Aceitos (Andamento)"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/vwServAceitoMarTI"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="#61474040"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwTiServAceitoMarTI" />
+
+    <TextView
+        android:id="@+id/vwTiServFinalizadoMarTI"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="40dp"
+        android:background="#85474040"
+        android:gravity="center"
+        android:text="Serviços Finalizados"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwServAceitoMarTI" />
+
+    <TextView
+        android:id="@+id/vwServFinalizadoMarTI"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="#61474040"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vwTiServFinalizadoMarTI" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
