--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -393,6 +393,12 @@
                     app:layout_constraintHorizontal_bias="0.497"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/btnChamaTelaVisualizaProfissionais"
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:text="PROFISSIONAIS" />
             </LinearLayout>
 
             <androidx.appcompat.widget.Toolbar
