--- a/app/src/main/res/layout/custom_view_servicos.xml
+++ b/app/src/main/res/layout/custom_view_servicos.xml
@@ -25,7 +25,7 @@
             android:padding="5dp">
 
             <TextView
-                android:id="@+id/viewNotaTVP"
+                android:id="@+id/viewNotaTVS"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:gravity="center"
@@ -38,7 +38,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/viewNomeTVP"
+                android:id="@+id/viewNomeTVS"
                 android:layout_width="0dp"
                 android:layout_height="26dp"
                 android:layout_marginTop="4dp"
@@ -46,30 +46,41 @@
                 android:gravity="center"
                 android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/viewNotaTVP"
+                app:layout_constraintStart_toEndOf="@+id/viewNotaTVS"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/viewAreaTVS"
-                android:layout_width="0dp"
+                android:layout_width="130dp"
                 android:layout_height="25dp"
-                android:text="ÁREA"
                 android:gravity="center"
+                android:text="ÁREA"
                 android:textColor="#000000"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/viewNotaTVP"
-                app:layout_constraintTop_toBottomOf="@+id/viewNomeTVP" />
+                app:layout_constraintStart_toEndOf="@+id/viewNotaTVS"
+                app:layout_constraintTop_toBottomOf="@+id/viewNomeTVS" />
 
             <TextView
-                android:id="@+id/viewDescTVP"
+                android:id="@+id/viewDescTVS"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:text="DESCRIÇÃO"
                 android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/viewNotaTVP"
+                app:layout_constraintStart_toEndOf="@+id/viewNotaTVS"
                 app:layout_constraintTop_toBottomOf="@+id/viewAreaTVS" />
+
+            <TextView
+                android:id="@+id/viewStatusTVS"
+                android:layout_width="130dp"
+                android:layout_height="25dp"
+                android:gravity="center"
+                android:text="STATUS"
+                android:textColor="#000000"
+                app:layout_constraintBottom_toTopOf="@+id/viewDescTVS"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/viewNomeTVS"
+                app:layout_constraintVertical_bias="1.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
