--- a/app/src/main/res/layout/activity_tela_cadastro_servico.xml
+++ b/app/src/main/res/layout/activity_tela_cadastro_servico.xml
@@ -88,6 +88,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="35dp"
                 android:foregroundTint="#000000"
+                android:gravity="center"
                 android:text="Selecione a área do serviço desejado"
                 android:textColor="#000000"
                 android:textColorHint="#000000"
