--- a/app/src/main/res/layout/activity_tela_edit_perfil.xml
+++ b/app/src/main/res/layout/activity_tela_edit_perfil.xml
@@ -242,6 +242,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="35dp"
                 android:foregroundTint="#000000"
+                android:gravity="center"
                 android:text="Selecione as áreas as quais possuí conhecimento!"
                 android:textColor="#000000"
                 android:textColorHint="#000000"
